# RecipesPerIngredient

./: .dockerignore  .eslintrc.json  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  workspace.json
.docker/: adminer-deployment.yaml  adminer-service.yaml  interface.web.dev.dockerfile  persistence-layer-networkpolicy.yaml  persistence-recipes-api-deployment.yaml  persistence-recipes-api-service.yaml  pg-admin-deployment.yaml  pg-admin-service.yaml  pg-admin-volume-persistentvolumeclaim.yaml  recipes-database-deployment.yaml  recipes-database-service.yaml  rest-api.dev.dockerfile  rest-api.persistence.dev.dockerfile  rest-api.retrieve.dev.dockerfile  retrieve-recipes-api-deployment.yaml  retrieve-recipes-api-service.yaml  web-interface-recipes-deployment.yaml  web-interface-recipes-tcp-service.yaml
.docker/database_state/: postgress-latest.sql  postgress.sql
.docker/images/: interface.web.dev.dockerfile  interface.web.prod.dockerfile  rest-api.persistence.dev.dockerfile  rest-api.persistence.prod.dockerfile  rest-api.retrieve.dev.dockerfile  rest-api.retrieve.prod.dockerfile
.docker/prod/: client-networkpolicy.yaml  db-storage-persistentvolumeclaim.yaml  (+9 more)
models/: Recipe.ts  package.json
scripts/tudo-receitas-web-scrapper/: pyproject.toml
scripts/tudo-receitas-web-scrapper/data/: recipes.json
scripts/tudo-receitas-web-scrapper/scrapper/: items.py  pipelines.py  settings.py
scripts/tudo-receitas-web-scrapper/scrapper/spiders/: receitas.py
(+194 files in other folders)
